force-app/main/default/objects/aecm__Program_Risk__c/aecm__Program_Risk__c.object-meta.xml
<CustomObject>
    <description>Container for a Tempest Program risk.</description>
    <label>Program Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>