force-app/main/default/objects/aecm__Program_Risk__c/fields/aecm__Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Risk1</relationshipName>
    <type>Lookup</type>
</CustomField>