force-app/main/default/objects/aecm__Program_Risk__c/fields/aecm__Preventive_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>aecm__Preventive_Action_Plan__c</fullName>
    <label>Preventive Action Plan</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>