force-app/main/default/objects/aecm__Program_Risk__c/fields/aecm__Program__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program__c</fullName>
    <label>Program</label>
    <referenceTo>aecm__Program__c</referenceTo>
    <relationshipLabel>Program Risk</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>