force-app/main/default/objects/aecm__Program_Risk__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Developing Preventive Plan</fullName>
            </value>
            <value>
                <fullName>Plan In Action</fullName>
            </value>
            <value>
                <fullName>Risk Averted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>