force-app/main/default/objects/aecm__Program_Risk__c/fields/aecm__User__c.field-meta.xml
<CustomField>
    <fullName>aecm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>