force-app/main/default/objects/aecm__Program_Risk__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>